--- a/public/_monju/company/index.html
+++ b/public/_monju/company/index.html
@@ -9,8 +9,8 @@
 <meta name="keywords" content="会社情報,企業情報,所在地,資本金,設立,現長株式会社">
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="../favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="../icon180.png">
+<link rel="shortcut icon" href="../img/logo_menu01_new.png">
+<link rel="apple-touch-icon" sizes="180x180" href="../img/logo_menu01_new.png">
 
 <!-- Font -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,19 +38,14 @@
 <aside>
 <ul class="scroll-box">
 <div class="menu_logo"><a href="/"><img src="../img/logo_menu01_new.png" class="linkimg"></a></div>
-<li><a href="/about/">現長について</a></li>
-<li><a href="/services/">事業内容</a></li>
-<li><a href="/works/">施工実績</a></li>
 <li><a href="/company/">会社情報</a></li>
+<li><a href="/works/">施工実績</a></li>
 <li><a href="/recruit/">採用情報</a></li>
 <li><a href="/contact/">お問い合わせ</a></li>
-<li><a href="/news/">お知らせ</a></li>
 <div class="mt-20">
 <a href="/contact/" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center w100">> お問い合わせ</a>
 </div>
 <div class="">
-<a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-twitter f_gry f16"></span></a>
-<a href="https://www.facebook.com/gencho416" target="_blank"><span class="fa-brands fa-facebook f_gry f16"></span></a>
 </div>
 </ul>
 <button><div class="opn_btn"><img src="../img/btn03_open.png"></div></button>
@@ -173,8 +168,7 @@ FAX : 0545-61-1343<br /><br />
 静岡県富士市横割6-8-1<br /><br />
 
 <strong class="f_grn">アクセス</strong><br />
-東名高速道路 富士ICより車で約10分<br />
-新東名高速道路 新富士ICより車で約15分<br /><br />
+阪神高速1号環状線「信濃橋出入口」から車で約3分<br /><br />
 
 お車でお越しの際は、お気軽にお問い合わせください。
 </p>
@@ -205,17 +199,12 @@ FAX : 0545-61-1343<br /><br />
 <img src="../img/logo_wht08_new.png" alt="現長株式会社ロゴ" />
 </div>
 <ul class="f_wht mb-20 ls01">
-<li><a href="/about/">現長について</a></li>
-<li><a href="/services/">事業内容</a></li>
 <li><a href="/works/">施工実績</a></li>
 <li><a href="/company/">会社情報</a></li>
 <li><a href="/recruit/">採用情報</a></li>
 <li><a href="/contact/">お問い合わせ</a></li>
-<li><a href="/news/">お知らせ</a></li>
 </ul>
 <div class="mb-20">
-<a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-twitter f_wht f20"></span></a>
-<a href="https://www.facebook.com/gencho416" target="_blank"><span class="fa-brands fa-facebook f_wht f20"></span></a>
 </div>
 </div>
 <div class="content_r"></div>
