--- a/public/_monju/index.html
+++ b/public/_monju/index.html
@@ -16,8 +16,8 @@
 <meta property="og:image" content="/_monju/img/og.jpg/">
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="icon180.png">
+<link rel="shortcut icon" href="img/logo_menu01_new.png">
+<link rel="apple-touch-icon" sizes="180x180" href="img/logo_menu01_new.png">
 
 <!-- Font -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,19 +49,14 @@
 <aside>
 <ul class="scroll-box">
 <div class="menu_logo"><a href="./"><img src="img/logo_menu01_new.png" class="linkimg"></a></div>
-<li><a href="/about/">現長について</a></li>
-<li><a href="/services/">事業内容</a></li>
-<li><a href="/works/">施工実績</a></li>
 <li><a href="/company/">会社情報</a></li>
+<li><a href="/works/">施工実績</a></li>
 <li><a href="/recruit/">採用情報</a></li>
 <li><a href="/contact/">お問い合わせ</a></li>
-<li><a href="/news/">お知らせ</a></li>
 <div class="mt-20">
 <a href="/contact/" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center w100">> お問い合わせ</a>
 </div>
 <div class="">
-<a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-twitter f_gry f16"></span></a>
-<a href="https://www.facebook.com/gencho416" target="_blank"><span class="fa-brands fa-facebook f_gry f16"></span></a>
 </div>
 </ul>
 <button><div class="opn_btn"><img src="../img/btn03_open.png"></div></button>
@@ -109,35 +104,33 @@
 シートシャッター施工のエキスパート<br class="pc">
 お客様のニーズに応える最適なソリューションを提供します
 </p>
-<a href="01concept/index.html" class="button large1 bkg-btn01 bkg-hover-btn01">>　現長について</a>
 </div>
 </div>
 </div>
 
-<!------ 02客室 ----------------------------------------------->
+<!------ 02会社情報 ----------------------------------------------->
 
 <section class="section-block feature-2 right no-padding-bottom">
 <div class="row flex">
 <div class="column width-8">
 <div class="feature-image mb-mobile-50">
 <div class="feature-image-inner horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
-<div class="pc"><img src="../img/top01.jpg" class="feature-img-small"></div>
-<div class="sp"><img src="../img/top01_sp.jpg" class="feature-img-small"></div>
+<div class="pc"><img src="../img/top04.jpg" class="feature-img-small"></div>
+<div class="sp"><img src="../img/top04_sp.jpg" class="feature-img-small"></div>
 </div></div></div>
 <div class="column width-3 offset-1 tategaki02">
 <div class="feature-content">
 <div class="feature-content-inner left center_sp horizon" data-animate-in="preset:slideInRightShort;duration:3000;delay:300ms;" data-threshold="0.3">
-<h2 class="lspacing-medium f16 ml-20 lh15">施工実績<span class="pc">　　　</span><br class="sp"><span class="allura f_grn shin ls01 ml-20">Projects</span></h2>
+<h2 class="lspacing-medium f16 ml-20 lh15">会社情報<span class="pc">　　　</span><br class="sp"><span class="allura f_grn shin ls01 ml-20">Company</span></h2>
 <p class="p1 ml-20">
-高品質なシートシャッター施工<br>
-豊富な実績と確かな技術力<br>
-お客様のご要望に応える施工実績
+会社概要や拠点情報などを<br>
+わかりやすくご案内します
 </p>
-<a href="02room/index.html" class="button large bkg-btn01 bkg-hover-btn01">>　詳細はこちら</a>
+<a href="/company/" class="button large bkg-btn01 bkg-hover-btn01">>　詳細はこちら</a>
 </div></div></div></div>
 </section>
 
-<!------ 03温泉 ----------------------------------------------->
+<!------ 03施工実績 ----------------------------------------------->
 
 <section class="section-block feature-2 no-padding-bottom">
 <div class="row flex">
@@ -145,46 +138,44 @@
 <div class="feature-image mb-mobile-50">
 <div class="feature-image-inner center-on-mobile horizon" data-animate-in="preset:slideInRightShort;duration:3000;delay:300ms;" data-threshold="0.3">
 <div class="img-wrap1">
-<div class="pc"><img src="../img/top02.jpg" class="feature-img-small"></div>
-<div class="sp"><img src="../img/top02_sp.jpg" class="feature-img-small"></div>
+<div class="pc"><img src="../img/top01.jpg" class="feature-img-small"></div>
+<div class="sp"><img src="../img/top01_sp.jpg" class="feature-img-small"></div>
 </div></div></div></div>
 <div class="column width-3 pull-9 tategaki02">
 <div class="feature-content">
 <div class="feature-content-inner left center_sp horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
-<h2 class="lspacing-medium f16 ml-20 lh15">保守・メンテナンス<span class="pc">　　　</span><br class="sp"><span class="allura f_grn shin ls01 ml-20">Maintenance</span></h2>
+<h2 class="lspacing-medium f16 ml-20 lh15">施工実績<span class="pc">　　　</span><br class="sp"><span class="allura f_grn shin ls01 ml-20">Projects</span></h2>
 <p class="p1 ml-20">
-定期的な点検とメンテナンス<br>
-長期的な品質保持を実現<br>
-安心と信頼のアフターサービス
+施工事例の一部をご紹介します<br>
+ご要望に応じた対応事例をご覧ください
 </p>
-<a href="03spa/index.html" class="button large bkg-btn01 bkg-hover-btn01">>　詳細はこちら</a>
+<a href="/works/" class="button large bkg-btn01 bkg-hover-btn01">>　詳細はこちら</a>
 </div></div></div></div>
 </section>
 
-<!------ 04料理 ----------------------------------------------->
+<!------ 04採用情報 ----------------------------------------------->
 
 <section class="section-block feature-2 right no-padding-bottom">
 <div class="row flex">
 <div class="column width-8">
 <div class="feature-image mb-mobile-50">
 <div class="feature-image-inner center-on-mobile horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
-<div class="pc"><img src="../img/top03.jpg" class="feature-img-small"></div>
-<div class="sp"><img src="../img/top03_sp.jpg" class="feature-img-small"></div>
+<div class="pc"><img src="../img/top02.jpg" class="feature-img-small"></div>
+<div class="sp"><img src="../img/top02_sp.jpg" class="feature-img-small"></div>
 </div></div></div>
 <div class="column width-3 offset-1 tategaki02">
 <div class="feature-content">
 <div class="feature-content-inner left center_sp horizon" data-animate-in="preset:slideInRightShort;duration:3000;delay:300ms;" data-threshold="0.3">
-<h2 class="lspacing-medium f16 ml-20 lh15">取扱製品・資材<span class="pc">　　　</span><br class="sp"><span class="allura f_grn shin ls01 ml-20">Products</span></h2>
+<h2 class="lspacing-medium f16 ml-20 lh15">採用情報<span class="pc">　　　</span><br class="sp"><span class="allura f_grn shin ls01 ml-20">Recruit</span></h2>
 <p class="p1 ml-20">
-各メーカー対応の豊富な製品群<br>
-高品質な建材と資材を厳選<br>
-最適な製品をご提案いたします
+現場で活躍する仲間を募集しています<br>
+募集職種の詳細はこちらから
 </p>
-<a href="04cuisine/index.html" class="button large bkg-btn01 bkg-hover-btn01">>　詳細はこちら</a>
+<a href="/recruit/" class="button large bkg-btn01 bkg-hover-btn01">>　詳細はこちら</a>
 </div></div></div></div>
 </section>
 
-<!------ 05館内 ----------------------------------------------->
+<!------ 05お問い合わせ ----------------------------------------------->
 
 <section class="section-block feature-2">
 <div class="row flex">
@@ -192,19 +183,18 @@
 <div class="feature-image mb-mobile-50">
 <div class="feature-image-inner center-on-mobile horizon" data-animate-in="preset:slideInRightShort;duration:3000;delay:300ms;" data-threshold="0.3">
 <div class="img-wrap1">
-<div class="pc"><img src="../img/top04.jpg" class="feature-img-small"></div>
-<div class="sp"><img src="../img/top04_sp.jpg" class="feature-img-small"></div>
+<div class="pc"><img src="../img/top03.jpg" class="feature-img-small"></div>
+<div class="sp"><img src="../img/top03_sp.jpg" class="feature-img-small"></div>
 </div></div></div></div>
 <div class="column width-3 pull-9 tategaki02">
 <div class="feature-content">
 <div class="feature-content-inner left center_sp horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
-<h2 class="lspacing-medium f16 ml-20 lh15">会社情報<span class="pc">　　　</span><br class="sp"><span class="allura f_grn shin ls01 ml-20">Company</span></h2>
+<h2 class="lspacing-medium f16 ml-20 lh15">お問い合わせ<span class="pc">　　　</span><br class="sp"><span class="allura f_grn shin ls01 ml-20">Contact</span></h2>
 <p class="p1 ml-20">
-確かな実績と信頼の企業理念<br>
-全国展開する施工ネットワーク<br>
-お客様の期待に応える建設会社
+ご相談・お見積りはお気軽に<br>
+お問い合わせフォームからご連絡ください
 </p>
-<a href="05facility/index.html" class="button large bkg-btn01 bkg-hover-btn01">>　詳細はこちら</a>
+<a href="/contact/" class="button large bkg-btn01 bkg-hover-btn01">>　詳細はこちら</a>
 </div></div></div></div>
 </section>
 
@@ -288,29 +278,27 @@
 ---　GENCHO GROUP　---
 </div></div>
 
-<div class="row pb-20 horizon" data-animate-in="preset:slideInUpShort;duration:1000ms;delay:400ms;" data-threshold="0.3">
+<div class="row pb-20 horizon footer-links" data-animate-in="preset:slideInUpShort;duration:1000ms;delay:400ms;" data-threshold="0.3">
   <div class="column width-3 mb-10">
-  <a href="https://www.gencho.biz/" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 公式サイト</a>
+  <a href="/company/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 会社情報</a>
   </div>
   <div class="column width-3 mb-10">
-  <a href="https://www.gencho.biz/services-4" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 事業内容</a>
+  <a href="/works/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 施工実績</a>
   </div>
   <div class="column width-3 mb-10">
-  <a href="https://www.gencho.biz/%E4%BC%9A%E7%A4%BE%E6%A6%82%E8%A6%81" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 会社概要</a>
+  <a href="/recruit/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 採用情報</a>
   </div>
   <div class="column width-3 mb-10">
-  <a href="https://en-gage.net/gencho/" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 採用情報</a>
+  <a href="/contact/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> お問い合わせ</a>
   </div>
+</div>
   </div>
 
 </div>
 
 <div class="f09 bkg-blk-footer">
 <div class="row">
-<div class="column width-6 f11 left1">
-<a href="09others/03accomm.html">宿泊約款</a> ｜ <a href="09others/04privacy.html">プライバシーポリシー</a>
-</div>
-<div class="column width-6 right1">Copyright(C) GENCHO Co., Ltd. , All Rights Reserved.
+<div class="column width-12 center">Copyright(C) GENCHO Co., Ltd. , All Rights Reserved.
 </div>
 </div>
 </div>
