--- a/public/_monju/index_gencho.html
+++ b/public/_monju/index_gencho.html
@@ -15,8 +15,8 @@
 <meta property="og:image" content="/_monju/img/og.jpg/">
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="icon180.png">
+<link rel="shortcut icon" href="img/logo_menu01.png">
+<link rel="apple-touch-icon" sizes="180x180" href="img/logo_menu01.png">
 
 <!-- Font -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -72,6 +72,10 @@
 <aside>
 <ul class="scroll-box">
 <div class="menu_logo"><a href="./"><img src="img/logo_menu01.png" class="linkimg"></a></div>
+<li><a href="/company/">会社情報</a></li>
+<li><a href="/works/">施工実績</a></li>
+<li><a href="/recruit/">採用情報</a></li>
+<li><a href="/contact/">お問い合わせ</a></li>
 <li><a href="01concept/index.html">現長株式会社について</a></li>
 <li><a href="02room/index.html">施工実績</a></li>
 <li><a href="03spa/index.html">保守・メンテナンス</a></li>
@@ -80,13 +84,10 @@
 <li><a href="06access/index.html">アクセス</a></li>
 <li><a href="https://en-gage.net/gencho/" target="_blank">採用情報</a></li>
 <li><a href="08qa/index.html">よくある質問</a></li>
-<li><a href="info/category/info/">お知らせ</a></li>
 <li class="sub-menu"><a href="09others/index.html">その他</a>
 <ul class="sub-menu-nav">
 <li><a href="09others/01seeing.html">対応エリア</a></li>
 <li><a href="09others/02movie.html">施工事例動画</a></li>
-<li><a href="09others/03accomm.html">取引規約</a></li>
-<li><a href="09others/04privacy.html">プライバシーポリシー</a></li>
 <li><a href="09others/05sitemap.html">サイトマップ</a></li>
 </ul>
 </li>
@@ -94,8 +95,6 @@
 <a id="tg_reservation" data-content="inline" data-modal-mode data-modal-width="800" data-lightbox-animation="fade" data-modal-animation="scaleOut" href="#signup-lightbox" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center lightbox-link w100">> お問い合わせ</a>
 </div>
 <div class="">
-<a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-x-twitter f_gry f16"></span></a>　
-<a href="https://www.facebook.com/gencho416" target="_blank"><span class="fa-brands fa-facebook f_gry f16"></span></a>　
 
 </div>
 </ul>
@@ -145,41 +144,6 @@
 </p>
 <a href="01concept/index.html" class="button large1 bkg-btn01 bkg-hover-btn01">>　現長株式会社について</a>
 </div>
-</div>
-</div>
-
-<!------ 01お知らせ ----------------------------------------------->
-
-<div class="section-block">
-<div class="row">
-<div class="column width-8 horizon" data-animate-in="preset:slideInLeftShort;duration:3000ms;">
-<h2 class="ls02 f16 center_sp">お知らせ<span class="pc">　　　　　</span><br class="sp"><span class="allura f_grn shin ls01 mb-10">Infomation</span></h2>
-
-<!-- TODO: 未確定 - お知らせコンテンツ -->
-<div id="post-142" class="line_box02">
-<span class="">- 2025/09/11 -</span>
-<a href="https://www.gencho.biz/">新規施工事例を追加しました</a>
-</div>
-<div id="post-136" class="line_box02">
-<span class="">- 2025/08/06 -</span>
-<a href="https://www.gencho.biz/">夏季休業のお知らせ</a>
-</div>
-<div id="post-126" class="line_box02">
-<span class="">- 2025/07/01 -</span>
-<a href="https://www.gencho.biz/">ホームページをリニューアルしました</a>
-</div>
-<div id="post-117" class="line_box02">
-<span class="">- 2025/06/19 -</span>
-<a href="https://www.gencho.biz/">新サービスのご案内</a>
-</div>
-</div>
-
-<div class="column width-4 horizon" data-animate-in="preset:slideInRightShort;duration:3000ms;">
-<a href="https://twitter.com/gencho416" target="_blank"><img src="img/btn_sns01.gif" class="linkimg"></a>
-<div class="mb-10"></div>
-<a href="https://www.facebook.com/gencho416" target="_blank"><img src="img/btn_sns02.gif" class="linkimg"></a>
-</div>
-
 </div>
 </div>
 
@@ -553,8 +517,6 @@ EV充電<br>
 <div class="top_logo02"><a href="./"><img src="img/logo_blk03.png" class="linkimg"></a></div>
 <div class="mt-10">〒550-0013 大阪府大阪市西区新町1-1-26　TEL：06-6585-9068</div>
 <div class="mt-20">
-<a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-x-twitter f_gry f14"></span></a>　
-<a href="https://www.facebook.com/gencho416" target="_blank"><span class="fa-brands fa-facebook f_gry f14"></span></a>　
 
 </div>
 </div>
@@ -575,29 +537,27 @@ EV充電<br>
 ---　GENCHO GROUP　---
 </div></div>
 
-<div class="row pb-20 horizon" data-animate-in="preset:slideInUpShort;duration:1000ms;delay:400ms;" data-threshold="0.3">
+<div class="row pb-20 horizon footer-links" data-animate-in="preset:slideInUpShort;duration:1000ms;delay:400ms;" data-threshold="0.3">
   <div class="column width-3 mb-10">
-  <a href="/https://www.gencho.biz/" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 現長株式会社</a>
+  <a href="/company/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 会社情報</a>
   </div>
   <div class="column width-3 mb-10">
-  <a href="https://www.gencho.biz/" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 関東支店</a>
+  <a href="/works/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 施工実績</a>
   </div>
   <div class="column width-3 mb-10">
-  <a href="https://www.gencho.biz/" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 東海支店</a>
+  <a href="/recruit/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 採用情報</a>
   </div>
   <div class="column width-3 mb-10">
-  <a href="/https://www.gencho.biz/" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 名古屋営業所</a>
+  <a href="/contact/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> お問い合わせ</a>
   </div>
+</div>
   </div>
 
 </div>
 
 <div class="f09 bkg-blk-footer">
 <div class="row">
-<div class="column width-6 f11 left1">
-<a href="09others/03accomm.html">取引規約</a> ｜ <a href="09others/04privacy.html">プライバシーポリシー</a>
-</div>
-<div class="column width-6 right1">Copyright(C) GENCHO Corporation , All Rights Reserved.
+<div class="column width-12 center">Copyright(C) GENCHO Corporation , All Rights Reserved.
 </div>
 </div>
 </div>
