--- a/public/_monju/recruit/index.html
+++ b/public/_monju/recruit/index.html
@@ -9,8 +9,8 @@
 <meta name="keywords" content="採用情報,求人,リクルート,建設業,現長株式会社">
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="../favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="../icon180.png">
+<link rel="shortcut icon" href="../img/logo_menu01_new.png">
+<link rel="apple-touch-icon" sizes="180x180" href="../img/logo_menu01_new.png">
 
 <!-- Font -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,19 +38,14 @@
 <aside>
 <ul class="scroll-box">
 <div class="menu_logo"><a href="/"><img src="../img/logo_menu01_new.png" class="linkimg"></a></div>
-<li><a href="/about/">現長について</a></li>
-<li><a href="/services/">事業内容</a></li>
-<li><a href="/works/">施工実績</a></li>
 <li><a href="/company/">会社情報</a></li>
+<li><a href="/works/">施工実績</a></li>
 <li><a href="/recruit/">採用情報</a></li>
 <li><a href="/contact/">お問い合わせ</a></li>
-<li><a href="/news/">お知らせ</a></li>
 <div class="mt-20">
 <a href="/contact/" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center w100">> お問い合わせ</a>
 </div>
 <div class="">
-<a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-twitter f_gry f16"></span></a>
-<a href="https://www.facebook.com/gencho416" target="_blank"><span class="fa-brands fa-facebook f_gry f16"></span></a>
 </div>
 </ul>
 <button><div class="opn_btn"><img src="../img/btn03_open.png"></div></button>
@@ -202,17 +197,12 @@
 <img src="../img/logo_wht08_new.png" alt="現長株式会社ロゴ" />
 </div>
 <ul class="f_wht mb-20 ls01">
-<li><a href="/about/">現長について</a></li>
-<li><a href="/services/">事業内容</a></li>
 <li><a href="/works/">施工実績</a></li>
 <li><a href="/company/">会社情報</a></li>
 <li><a href="/recruit/">採用情報</a></li>
 <li><a href="/contact/">お問い合わせ</a></li>
-<li><a href="/news/">お知らせ</a></li>
 </ul>
 <div class="mb-20">
-<a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-twitter f_wht f20"></span></a>
-<a href="https://www.facebook.com/gencho416" target="_blank"><span class="fa-brands fa-facebook f_wht f20"></span></a>
 </div>
 </div>
 <div class="content_r"></div>
