--- a/public/company/index.html
+++ b/public/company/index.html
@@ -9,8 +9,8 @@
 <meta name="keywords" content="会社情報,企業情報,所在地,資本金,設立,現長株式会社">
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="/favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="/icon180.png">
+<link rel="shortcut icon" href="/img/logo_menu01_new.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/img/logo_menu01_new.png">
 
 <!-- Font -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -155,19 +155,14 @@
 <aside>
 <ul class="scroll-box">
 <div class="menu_logo"><a href="/"><img src="/img/logo_menu01_new.png" class="linkimg"></a></div>
-<li><a href="/about/">現長について</a></li>
-<li><a href="/services/">事業内容</a></li>
-<li><a href="/works/">施工実績</a></li>
 <li><a href="/company/">会社情報</a></li>
+<li><a href="/works/">施工実績</a></li>
 <li><a href="/recruit/">採用情報</a></li>
 <li><a href="/contact/">お問い合わせ</a></li>
-<li><a href="/news/">お知らせ</a></li>
 <div class="mt-20">
 <a href="/contact/" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center w100">> お問い合わせ</a>
 </div>
 <div class="">
-<a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-twitter f_gry f16"></span></a>
-<a href="https://www.facebook.com/gencho416" target="_blank"><span class="fa-brands fa-facebook f_gry f16"></span></a>
 </div>
 </ul>
 <button><div class="opn_btn"><img src="/img/btn03_open.png"></div></button>
@@ -212,105 +207,33 @@
 <tbody>
 <tr>
 <th>会社名</th>
-<td>現長株式会社<br />GENCHO Co., Ltd.</td>
-</tr>
-<tr>
-<th>設立</th>
-<td>1985年（昭和60年）</td>
-</tr>
-<tr>
-<th>資本金</th>
-<td>1,000万円</td>
-</tr>
-<tr>
-<th>代表者</th>
-<td>代表取締役</td>
-</tr>
-<tr>
-<th>従業員数</th>
-<td>25名</td>
+<td>現長株式会社（Gencho co.,ltd.）</td>
 </tr>
 <tr>
 <th>所在地</th>
-<td>〒416-0944<br />静岡県富士市横割6-8-1</td>
+<td>大阪府大阪市西区新町1-1-26</td>
 </tr>
 <tr>
-<th>連絡先</th>
-<td>TEL: 0545-61-1344<br />FAX: 0545-61-1343</td>
+<th>代表者</th>
+<td>代表取締役 西橋 徹</td>
 </tr>
 <tr>
-<th>営業時間</th>
-<td>8:00〜17:00（土日祝除く）</td>
+<th>資本金</th>
+<td>3,000千円</td>
 </tr>
 <tr>
-<th>主要事業</th>
+<th>支店・営業所</th>
 <td>
-シートシャッター施工<br />
-基礎・土間工事<br />
-テント倉庫改修<br />
-建具・サッシ工事<br />
-塗装・防水工事
+大阪支店・倉庫（大阪市港区弁天）<br />
+関東支店（神奈川県厚木市）<br />
+東海支店（愛知県江南市）<br />
+名古屋営業所（名古屋市天白区）<br />
+静岡営業所（静岡市）<br />
+三重作業場・倉庫（伊賀市）
 </td>
-</tr>
-<tr>
-<th>対応エリア</th>
-<td>静岡県を中心に全国対応可能<br />※詳細はお問い合わせください</td>
-</tr>
-<tr>
-<th>取引銀行</th>
-<td>静岡銀行 富士支店<br />清水銀行 富士支店</td>
-</tr>
-<tr>
-<th>主要取引先</th>
-<td>製造業、物流業、商業施設、食品工場など<br />多数のお取引実績がございます</td>
 </tr>
 </tbody>
 </table>
-</div>
-</div>
-</section>
-
-<!------ Company History Timeline ----------------------------------------------->
-
-<section class="section-block bkg-grey-ultralight">
-<div class="row">
-<div class="column width-12 horizon" data-animate-in="preset:slideInUpShort;duration:3000ms;">
-<h2 class="ls02 f16 center_sp mb-40">会社沿革<br /><span class="allura f_grn shin ls01">Company History</span></h2>
-
-<div class="row">
-<div class="column width-3 center_sp mb-30">
-<div class="horizon" data-animate-in="preset:slideInLeftShort;duration:3000;delay:0ms;" data-threshold="0.3">
-<div class="f_grn" style="font-size: 3rem; font-weight: bold;">1985</div>
-<h3 class="f16 mb-10">創業</h3>
-<p class="p1">現長株式会社設立<br />シートシャッター施工事業を開始</p>
-</div>
-</div>
-
-<div class="column width-3 center_sp mb-30">
-<div class="horizon" data-animate-in="preset:slideInLeftShort;duration:3000;delay:200ms;" data-threshold="0.3">
-<div class="f_grn" style="font-size: 3rem; font-weight: bold;">2000</div>
-<h3 class="f16 mb-10">事業拡大</h3>
-<p class="p1">施工エリアを全国に拡大<br />技術力の向上と実績の蓄積</p>
-</div>
-</div>
-
-<div class="column width-3 center_sp mb-30">
-<div class="horizon" data-animate-in="preset:slideInLeftShort;duration:3000;delay:400ms;" data-threshold="0.3">
-<div class="f_grn" style="font-size: 3rem; font-weight: bold;">2015</div>
-<h3 class="f16 mb-10">品質管理強化</h3>
-<p class="p1">ISO認証取得<br />品質管理システムの導入</p>
-</div>
-</div>
-
-<div class="column width-3 center_sp mb-30">
-<div class="horizon" data-animate-in="preset:slideInLeftShort;duration:3000;delay:600ms;" data-threshold="0.3">
-<div class="f_grn" style="font-size: 3rem; font-weight: bold;">2025</div>
-<h3 class="f16 mb-10">現在</h3>
-<p class="p1">業界トップクラスの技術力<br />お客様満足度No.1を目指して</p>
-</div>
-</div>
-</div>
-
 </div>
 </div>
 </section>
@@ -324,7 +247,7 @@
 
 <div class="horizon" data-animate-in="preset:slideInUpShort;duration:1500ms;delay:200ms;">
 <div class="map-container">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3273.7347156986834!2d138.66697931525956!3d35.1611299801907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6019a1f8e8b8b8b9%3A0x1234567890abcdef!2z6Z2Z5bKh55yM5a-M5aOr5biC!5e0!3m2!1sja!2sjp!4v1234567890123!5m2!1sja!2sjp" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe src="https://www.google.com/maps?q=34.679134,135.497549&output=embed" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 </div>
 
@@ -335,7 +258,7 @@
 <i class="fa-solid fa-location-dot f_grn" style="font-size: 2rem;"></i>
 </div>
 <h3 class="f16 mb-10 center_sp">所在地</h3>
-<p class="p1 center_sp">〒416-0944<br />静岡県富士市横割6-8-1</p>
+<p class="p1 center_sp">大阪府大阪市西区新町1-1-26</p>
 </div>
 </div>
 
@@ -345,7 +268,7 @@
 <i class="fa-solid fa-car f_grn" style="font-size: 2rem;"></i>
 </div>
 <h3 class="f16 mb-10 center_sp">お車でお越しの方</h3>
-<p class="p1 center_sp">東名高速道路 富士ICより約10分<br />新東名高速道路 新富士ICより約15分</p>
+<p class="p1 center_sp">阪神高速1号環状線「信濃橋出入口」から車で約3分</p>
 </div>
 </div>
 
@@ -355,38 +278,8 @@
 <i class="fa-solid fa-phone f_grn" style="font-size: 2rem;"></i>
 </div>
 <h3 class="f16 mb-10 center_sp">お問い合わせ</h3>
-<p class="p1 center_sp">TEL: 0545-61-1344<br />FAX: 0545-61-1343</p>
+<p class="p1 center_sp">TEL: 06-6585-9068</p>
 </div>
-</div>
-</div>
-</div>
-</div>
-</section>
-
-<!------ Certification & Licenses ----------------------------------------------->
-
-<section class="section-block bkg-info02" style="margin-bottom: 80px;">
-<div class="row">
-<div class="column width-12">
-<h2 class="ls02 f16 center_sp mb-40 horizon" data-animate-in="preset:slideInUpShort;duration:1500ms;">認証・許可<br /><span class="allura f_grn shin ls01">Certification & Licenses</span></h2>
-
-<div class="cert-grid horizon" data-animate-in="preset:slideInUpShort;duration:1500ms;delay:200ms;">
-<div class="cert-item">
-<div class="cert-icon"><i class="fa-solid fa-certificate"></i></div>
-<div class="cert-title">建設業許可</div>
-<p class="cert-desc">静岡県知事許可<br />（般-XX）第XXXXX号</p>
-</div>
-
-<div class="cert-item">
-<div class="cert-icon"><i class="fa-solid fa-award"></i></div>
-<div class="cert-title">ISO 9001認証</div>
-<p class="cert-desc">品質マネジメントシステム<br />国際規格認証取得</p>
-</div>
-
-<div class="cert-item">
-<div class="cert-icon"><i class="fa-solid fa-user-check"></i></div>
-<div class="cert-title">有資格者</div>
-<p class="cert-desc">一級建築施工管理技士<br />その他各種資格保有</p>
 </div>
 </div>
 </div>
@@ -403,29 +296,24 @@
 ---　GENCHO GROUP　---
 </div></div>
 
-<div class="row pb-20 horizon" data-animate-in="preset:slideInUpShort;duration:1000ms;delay:400ms;" data-threshold="0.3">
+<div class="row pb-20 horizon footer-links" data-animate-in="preset:slideInUpShort;duration:1000ms;delay:400ms;" data-threshold="0.3">
   <div class="column width-3 mb-10">
-  <a href="https://www.gencho.biz/" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 公式サイト</a>
+  <a href="/works/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 施工実績</a>
   </div>
   <div class="column width-3 mb-10">
-  <a href="https://www.gencho.biz/services-4" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 事業内容</a>
+  <a href="/recruit/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 採用情報</a>
   </div>
   <div class="column width-3 mb-10">
-  <a href="https://www.gencho.biz/%E4%BC%9A%E7%A4%BE%E6%A6%82%E8%A6%81" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 会社概要</a>
+  <a href="/contact/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> お問い合わせ</a>
   </div>
-  <div class="column width-3 mb-10">
-  <a href="https://en-gage.net/gencho/" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 採用情報</a>
-  </div>
+</div>
   </div>
 
 </div>
 
 <div class="f09 bkg-blk-footer">
 <div class="row">
-<div class="column width-6 f11 left1">
-<a href="/about/">現長について</a> ｜ <a href="/services/">事業内容</a> ｜ <a href="/contact/">お問い合わせ</a>
-</div>
-<div class="column width-6 right1">Copyright(C) GENCHO Co., Ltd. , All Rights Reserved.
+<div class="column width-12 center">Copyright(C) GENCHO Co., Ltd. , All Rights Reserved.
 </div>
 </div>
 </div>
