--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -15,8 +15,8 @@
 <meta property="og:site_name" content="現長株式会社">
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="/favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="/icon180.png">
+<link rel="shortcut icon" href="/img/logo_menu01_new.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/img/logo_menu01_new.png">
 
 <!-- Font -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,7 +37,7 @@
 
 
 <!-- ボタン ------------>
-<div class="reser01"><a href="#contact-form" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center w100">> お問い合わせフォーム</a>
+<div class="reser01"><a href="#contact-line" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center w100">> お問い合わせ</a>
 </div>
 
 <!-- メニュー ------------>
@@ -46,19 +46,14 @@
 <aside>
 <ul class="scroll-box">
 <div class="menu_logo"><a href="/"><img src="/img/logo_menu01_new.png" class="linkimg"></a></div>
-<li><a href="/about/">現長について</a></li>
-<li><a href="/services/">事業内容</a></li>
-<li><a href="/works/">施工実績</a></li>
 <li><a href="/company/">会社情報</a></li>
+<li><a href="/works/">施工実績</a></li>
 <li><a href="/recruit/">採用情報</a></li>
 <li><a href="/contact/">お問い合わせ</a></li>
-<li><a href="/news/">お知らせ</a></li>
 <div class="mt-20">
 <a href="/contact/" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center w100">> お問い合わせ</a>
 </div>
 <div class="">
-<a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-twitter f_gry f16"></span></a>
-<a href="https://www.facebook.com/gencho416" target="_blank"><span class="fa-brands fa-facebook f_gry f16"></span></a>
 </div>
 </ul>
 <button><div class="opn_btn"><img src="/img/btn03_open.png"></div></button>
@@ -96,148 +91,44 @@
 </div>
 </section>
 
-<!------ 3つのお問い合わせ方法（横並び） ----------------------------------------------->
+<!------ お問い合わせ（電話・LINE） ----------------------------------------------->
 
-<section class="section-block bkg-grey-ultralight">
+<section id="contact-line" class="section-block bkg-grey-ultralight">
 <div class="row">
 <div class="column width-12 horizon" data-animate-in="preset:slideInUpShort;duration:3000ms;">
-<h2 class="ls02 f16 center mb-40">お問い合わせ方法<br /><span class="allura f_grn shin ls01">Contact Methods</span></h2>
+<h2 class="ls02 f16 center mb-40">お問い合わせ<br /><span class="allura f_grn shin ls01">Contact</span></h2>
 
 <div class="row">
-<div class="column width-4 center mb-30">
+<div class="column width-6 center mb-30">
 <div class="horizon" data-animate-in="preset:slideInUpShort;duration:3000;delay:0ms;" data-threshold="0.3">
 <div class="mb-20">
 <i class="fa-solid fa-phone" style="font-size: 3rem; color: #6b8e23;"></i>
 </div>
 <h3 class="f16 mb-10">お電話</h3>
 <p class="p1">
-お急ぎの方は<br />
 お電話でお問い合わせください<br /><br />
-<strong class="f_grn f14">0545-61-1344</strong><br />
+<strong class="f_grn f14">06-6585-9068</strong><br />
 <span class="f08">平日 8:00〜17:00</span>
 </p>
-<a href="tel:0545-61-1344" class="button medium bkg-btn01 bkg-hover-btn01 mt-20">> 電話をかける</a>
+<a href="tel:06-6585-9068" class="button medium bkg-btn01 bkg-hover-btn01 mt-20">> 電話をかける</a>
 </div>
 </div>
 
-<div class="column width-4 center mb-30">
+<div class="column width-6 center mb-30">
 <div class="horizon" data-animate-in="preset:slideInUpShort;duration:3000;delay:200ms;" data-threshold="0.3">
 <div class="mb-20">
-<i class="fa-solid fa-envelope" style="font-size: 3rem; color: #6b8e23;"></i>
+<i class="fa-brands fa-line" style="font-size: 3rem; color: #6b8e23;"></i>
 </div>
-<h3 class="f16 mb-10">メールフォーム</h3>
+<h3 class="f16 mb-10">LINE</h3>
 <p class="p1">
-詳細なご相談は<br />
-メールフォームをご利用ください<br /><br />
-<strong class="f_grn f14">24時間受付</strong><br />
-<span class="f08">営業日内にご返信</span>
+LINEでのご相談も受け付けます<br />
+公式アカウントは準備中です
 </p>
-<a href="#contact-form" class="button medium bkg-btn01 bkg-hover-btn01 mt-20">> フォームへ</a>
-</div>
-</div>
-
-<div class="column width-4 center mb-30">
-<div class="horizon" data-animate-in="preset:slideInUpShort;duration:3000;delay:400ms;" data-threshold="0.3">
-<div class="mb-20">
-<i class="fa-solid fa-building" style="font-size: 3rem; color: #6b8e23;"></i>
-</div>
-<h3 class="f16 mb-10">ご来社</h3>
-<p class="p1">
-直接ご相談されたい方は<br />
-事前にご連絡ください<br /><br />
-<strong class="f_grn f14">静岡県富士市</strong><br />
-<span class="f08">駐車場完備</span>
-</p>
-<a href="#access-map" class="button medium bkg-btn01 bkg-hover-btn01 mt-20">> アクセス</a>
+<a href="#" class="button medium bkg-btn01 bkg-hover-btn01 mt-20">> LINEで問い合わせ（準備中）</a>
 </div>
 </div>
 </div>
 
-</div>
-</div>
-</section>
-
-<!------ お問い合わせフォーム ----------------------------------------------->
-
-<section id="contact-form" class="section-block">
-<div class="row">
-<div class="column width-12 horizon" data-animate-in="preset:slideInUpShort;duration:3000ms;">
-<h2 class="ls02 f16 center mb-40">お問い合わせフォーム<br /><span class="allura f_grn shin ls01">Contact Form</span></h2>
-</div>
-</div>
-
-<div class="row">
-<div class="column width-8 offset-2">
-<div class="bkg-grey-ultralight pt-30 pb-30 pl-30 pr-30 horizon" data-animate-in="preset:slideInUpShort;duration:3000;delay:300ms;" data-threshold="0.3">
-
-<form action="https://formspree.io/f/xanyqajb" method="POST" class="contact-form">
-
-<div class="mb-20">
-<label class="f14 f_grn mb-10" style="display: block; font-weight: bold;">◆ お名前<span class="f_red">（必須）</span></label>
-<input type="text" name="name" required class="form-input w100" placeholder="例：山田太郎" style="padding: 10px; font-size: 14px; border: 1px solid #ccc; border-radius: 4px;">
-</div>
-
-<div class="mb-20">
-<label class="f14 f_grn mb-10" style="display: block; font-weight: bold;">◆ 会社名・団体名</label>
-<input type="text" name="company" class="form-input w100" placeholder="例：株式会社〇〇" style="padding: 10px; font-size: 14px; border: 1px solid #ccc; border-radius: 4px;">
-</div>
-
-<div class="mb-20">
-<label class="f14 f_grn mb-10" style="display: block; font-weight: bold;">◆ メールアドレス<span class="f_red">（必須）</span></label>
-<input type="email" name="email" required class="form-input w100" placeholder="例：example@example.com" style="padding: 10px; font-size: 14px; border: 1px solid #ccc; border-radius: 4px;">
-</div>
-
-<div class="mb-20">
-<label class="f14 f_grn mb-10" style="display: block; font-weight: bold;">◆ 電話番号</label>
-<input type="tel" name="phone" class="form-input w100" placeholder="例：03-1234-5678" style="padding: 10px; font-size: 14px; border: 1px solid #ccc; border-radius: 4px;">
-</div>
-
-<div class="mb-20">
-<label class="f14 f_grn mb-10" style="display: block; font-weight: bold;">◆ お問い合わせ種別<span class="f_red">（必須）</span></label>
-<div style="padding: 10px 0;">
-<label style="display: block; margin-bottom: 8px;">
-<input type="radio" name="inquiry_type" value="お見積もり" required style="margin-right: 8px;">
-お見積もり
-</label>
-<label style="display: block; margin-bottom: 8px;">
-<input type="radio" name="inquiry_type" value="ご相談" style="margin-right: 8px;">
-ご相談
-</label>
-<label style="display: block; margin-bottom: 8px;">
-<input type="radio" name="inquiry_type" value="資料請求" style="margin-right: 8px;">
-資料請求
-</label>
-<label style="display: block; margin-bottom: 8px;">
-<input type="radio" name="inquiry_type" value="採用について" style="margin-right: 8px;">
-採用について
-</label>
-<label style="display: block; margin-bottom: 8px;">
-<input type="radio" name="inquiry_type" value="その他" style="margin-right: 8px;">
-その他
-</label>
-</div>
-</div>
-
-<div class="mb-20">
-<label class="f14 f_grn mb-10" style="display: block; font-weight: bold;">◆ お問い合わせ内容<span class="f_red">（必須）</span></label>
-<textarea name="message" required rows="8" class="form-input w100" placeholder="お問い合わせ内容をできるだけ詳しくご記入ください" style="padding: 10px; font-size: 14px; border: 1px solid #ccc; border-radius: 4px; resize: vertical;"></textarea>
-</div>
-
-<div class="mb-20">
-<p class="f08" style="line-height: 1.6;">
-※ご入力いただいた個人情報は、お問い合わせへの回答のみに使用いたします。<br />
-※営業日内（平日8:00〜17:00）に担当者よりご連絡させていただきます。<br />
-※お急ぎの場合は、お電話にてお問い合わせください。
-</p>
-</div>
-
-<div class="center">
-<button type="submit" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center" style="min-width: 250px;">> 送信する</button>
-</div>
-
-</form>
-
-</div>
 </div>
 </div>
 </section>
@@ -245,92 +136,6 @@
 <p id="pagetop">
 <a href="#"><span>▲</span></a>
 </p>
-
-<!------ 会社情報（アイコン形式） ----------------------------------------------->
-
-<section class="section-block pb-20 bkg-grey-ultralight">
-
-<div class="row flex mb-40 horizon" data-animate-in="preset:slideInUpShort;duration:1800ms;" data-threshold="0.3">
-<div class="column width-12 mb-20">
-<div class="line02 f16 center ls22">会社情報<br><span class="allura f_grn f09">Company Information</span></div>
-</div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon30.png"></div>
-<div class="cell">
-本社所在地<br>
-〒416-0944<br>
-<span class="f08">静岡県富士市横割6-8-1</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon26.png"></div>
-<div class="cell">
-電話・FAX<br>
-TEL: 0545-61-1344<br>
-<span class="f08">FAX: 0545-61-1343</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon25.png"></div>
-<div class="cell">
-営業時間<br>
-8:00〜17:00<br>
-<span class="f08">定休日：土日祝</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon27.png"></div>
-<div class="cell">
-メール<br>
-<span class="f08">info@gencho.biz<br>
-24時間受付</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon31.png"></div>
-<div class="cell">
-駐車場<br>
-<span class="f08">無料駐車場完備<br>
-お車でのご来社可能</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon30.png"></div>
-<div class="cell">
-アクセス<br>
-<span class="f08">東名富士ICより車で約10分<br>
-新東名新富士ICより約15分</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon35.png"></div>
-<div class="cell">
-対応エリア<br>
-<span class="f08">全国対応<br>
-お気軽にご相談ください</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon29.png"></div>
-<div class="cell">
-ご来社の際は<br>
-<span class="f08">事前にご連絡をお願いします<br>
-担当者が対応いたします</span>
-</div></div></div>
-
-</div>
-
-</section>
-
 <!------ Googleマップ ----------------------------------------------->
 
 <section id="access-map" class="section-block pb-0">
@@ -344,7 +149,7 @@ TEL: 0545-61-1344<br>
 <div class="column width-12">
 <div class="horizon" data-animate-in="preset:slideInUpShort;duration:3000;delay:300ms;" data-threshold="0.3">
 <iframe
-  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3266.3896847267644!2d138.6516!3d35.1446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6019a51f7f9c5555%3A0x1234567890abcdef!2z6Z2Z5bKh55yM5a-M5aOr5biC!5e0!3m2!1sja!2sjp!4v1234567890123!5m2!1sja!2sjp"
+  src="https://www.google.com/maps?q=34.679134,135.497549&output=embed"
   width="100%"
   height="450"
   style="border:0;"
@@ -353,7 +158,7 @@ TEL: 0545-61-1344<br>
   referrerpolicy="no-referrer-when-downgrade">
 </iframe>
 <p class="center mt-20 f08">
-※正確な住所は「〒416-0944 静岡県富士市横割6-8-1」です。<br />
+※正確な住所は「大阪府大阪市西区新町1-1-26」です。<br />
 カーナビをご利用の際は、上記住所をご入力ください。
 </p>
 </div>
@@ -371,29 +176,24 @@ TEL: 0545-61-1344<br>
 ---　GENCHO GROUP　---
 </div></div>
 
-<div class="row pb-20 horizon" data-animate-in="preset:slideInUpShort;duration:1000ms;delay:400ms;" data-threshold="0.3">
-  <div class="column width-3 mb-10">
-  <a href="/about/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 現長について</a>
-  </div>
-  <div class="column width-3 mb-10">
-  <a href="/services/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 事業内容</a>
-  </div>
+<div class="row pb-20 horizon footer-links" data-animate-in="preset:slideInUpShort;duration:1000ms;delay:400ms;" data-threshold="0.3">
   <div class="column width-3 mb-10">
   <a href="/company/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 会社情報</a>
   </div>
   <div class="column width-3 mb-10">
+  <a href="/works/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 施工実績</a>
+  </div>
+  <div class="column width-3 mb-10">
   <a href="/recruit/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 採用情報</a>
   </div>
+</div>
   </div>
 
 </div>
 
 <div class="f09 bkg-blk-footer">
 <div class="row">
-<div class="column width-6 f11 left1">
-<a href="/company/">会社情報</a> ｜ <a href="/contact/">お問い合わせ</a>
-</div>
-<div class="column width-6 right1">Copyright(C) GENCHO Co., Ltd. , All Rights Reserved.
+<div class="column width-12 center">Copyright(C) GENCHO Co., Ltd. , All Rights Reserved.
 </div>
 </div>
 </div>
