--- a/public/recruit/index.html
+++ b/public/recruit/index.html
@@ -15,8 +15,8 @@
 <meta property="og:site_name" content="現長株式会社">
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="/favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="/icon180.png">
+<link rel="shortcut icon" href="/img/logo_menu01_new.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/img/logo_menu01_new.png">
 
 <!-- Font -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,19 +49,14 @@
 <aside>
 <ul class="scroll-box">
 <div class="menu_logo"><a href="/"><img src="/img/logo_menu01_new.png" class="linkimg"></a></div>
-<li><a href="/about/">現長について</a></li>
-<li><a href="/services/">事業内容</a></li>
-<li><a href="/works/">施工実績</a></li>
 <li><a href="/company/">会社情報</a></li>
+<li><a href="/works/">施工実績</a></li>
 <li><a href="/recruit/">採用情報</a></li>
 <li><a href="/contact/">お問い合わせ</a></li>
-<li><a href="/news/">お知らせ</a></li>
 <div class="mt-20">
 <a href="/contact/" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center w100">> お問い合わせ</a>
 </div>
 <div class="">
-<a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-twitter f_gry f16"></span></a>
-<a href="https://www.facebook.com/gencho416" target="_blank"><span class="fa-brands fa-facebook f_gry f16"></span></a>
 </div>
 </ul>
 <button><div class="opn_btn"><img src="/img/btn03_open.png"></div></button>
@@ -86,341 +81,118 @@
 </div>
 </div>
 
-<!------ コンセプト ----------------------------------------------->
-
-<div class="section-block bkg-info02 pt-120a mb-40">
-<div class="row">
-<div class="column width-5 pc">
-<img src="/img/space01.png" width="100%" height="400px" alt="スペーサー">
-</div>
-<div class="column width-5 center_sp horizon" data-animate-in="preset:slideInRightShort;duration:3000ms;">
-<h2 class="ls02 f15a lh18">共に成長し、建設業界の未来を創る<br>
-現長株式会社で働く仲間を募集</h2>
-<div class="allura f16 f_grn ls01 mb-10">Recruit Information</div>
-<p class="p1">
-シートシャッター施工のエキスパートとして<br class="pc">
-確かな技術と上質な施工を追求する当社で<br class="pc">
-あなたの可能性を最大限に発揮してください<br class="pc">
-<br>
-経験者はもちろん、未経験の方も大歓迎です
-</p>
-<a href="#entry-section" class="button large1 bkg-btn01 bkg-hover-btn01">>　エントリーはこちら</a>
-</div>
-</div>
-</div>
-
-<!------ 01採用メッセージ（職人の物語） ----------------------------------------------->
-
-<section class="section-block feature-2 right no-padding-bottom">
-<div class="row flex">
-<div class="column width-8">
-<div class="feature-image mb-mobile-50">
-<div class="feature-image-inner horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
-<div class="pc"><img src="/img/top01.jpg" alt="職人の技術"></div>
-<div class="sp"><img src="/img/top01_sp.jpg" alt="職人の技術"></div>
-</div></div></div>
-<div class="column width-3 offset-1 tategaki02">
-<div class="feature-content">
-<div class="feature-content-inner left center_sp horizon" data-animate-in="preset:slideInRightShort;duration:3000;delay:300ms;" data-threshold="0.3">
-<h2 class="lspacing-medium f16 ml-20 lh15">代表からのメッセージ<span class="pc">　　　</span><br class="sp"><span class="allura f_grn shin ls01 ml-20">Message</span></h2>
-<p class="p1 ml-20">
-一つひとつの仕事に誠実に向き合う<br>
-お客様の期待を超える品質を追求する<br>
-仲間と共に成長し続ける<br>
-<br>
-これが現長株式会社の姿勢です<br>
-<br>
-私たちは、技術力と人間力を兼ね備えた<br>
-プロフェッショナルを育てる環境を<br>
-整えています<br>
-<br>
-経験の有無は問いません<br>
-大切なのは、学ぶ意欲と誠実な姿勢です<br>
-<br>
-あなたの挑戦をお待ちしています
-</p>
-</div></div></div></div>
-</section>
-
-<!------ 02働く仲間たち ----------------------------------------------->
-
-<section class="section-block feature-2 no-padding-bottom">
-<div class="row flex">
-<div class="column width-8 push-3 offset-1">
-<div class="feature-image mb-mobile-50">
-<div class="feature-image-inner center-on-mobile horizon" data-animate-in="preset:slideInRightShort;duration:3000;delay:300ms;" data-threshold="0.3">
-<div class="img-wrap1">
-<div class="pc"><img src="/img/top02.jpg" alt="働く仲間たち"></div>
-<div class="sp"><img src="/img/top02_sp.jpg" alt="働く仲間たち"></div>
-</div></div></div></div>
-<div class="column width-3 pull-9 tategaki02">
-<div class="feature-content">
-<div class="feature-content-inner left center_sp horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
-<h2 class="lspacing-medium f16 ml-20 lh15">働く仲間たち<span class="pc">　　　</span><br class="sp"><span class="allura f_grn shin ls01 ml-20">Our Team</span></h2>
-<p class="p1 ml-20">
-<strong class="f_grn">経験豊富な先輩社員</strong><br>
-20年以上のキャリアを持つベテランから<br>
-若手まで、幅広い世代が活躍しています<br>
-<br>
-<strong class="f_grn">丁寧な指導体制</strong><br>
-入社後はマンツーマンでサポート<br>
-基礎から応用まで、確実に技術が身につきます<br>
-<br>
-<strong class="f_grn">風通しの良い職場</strong><br>
-年齢や経験に関わらず<br>
-意見を言い合える雰囲気があります<br>
-<br>
-<strong class="f_grn">チームワーク重視</strong><br>
-一人ひとりの個性を尊重しながら<br>
-チーム全体で品質を追求します
-</p>
-</div></div></div></div>
-</section>
-
-<!------ 03成長できる環境 ----------------------------------------------->
-
-<section class="section-block feature-2 right no-padding-bottom">
-<div class="row flex">
-<div class="column width-8">
-<div class="feature-image mb-mobile-50">
-<div class="feature-image-inner center-on-mobile horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
-<div class="pc"><img src="/img/top03.jpg" alt="成長できる環境"></div>
-<div class="sp"><img src="/img/top03_sp.jpg" alt="成長できる環境"></div>
-</div></div></div>
-<div class="column width-3 offset-1 tategaki02">
-<div class="feature-content">
-<div class="feature-content-inner left center_sp horizon" data-animate-in="preset:slideInRightShort;duration:3000;delay:300ms;" data-threshold="0.3">
-<h2 class="lspacing-medium f16 ml-20 lh15">成長できる環境<span class="pc">　　　</span><br class="sp"><span class="allura f_grn shin ls01 ml-20">Growth</span></h2>
-<p class="p1 ml-20">
-<strong class="f_grn">充実の研修制度</strong><br>
-基礎研修から専門技術研修まで<br>
-段階的にスキルアップできます<br>
-<br>
-<strong class="f_grn">資格取得を全面支援</strong><br>
-受験費用の負担はもちろん<br>
-勉強時間の確保もサポートします<br>
-<br>
-<strong class="f_grn">多様なプロジェクト</strong><br>
-小規模から大規模案件まで<br>
-幅広い経験を積むことができます<br>
-<br>
-<strong class="f_grn">キャリアパス明確</strong><br>
-施工スタッフから現場監督<br>
-そして管理職へのステップアップが可能です
-</p>
-</div></div></div></div>
-</section>
-
-<!------ 04現長の一日 ----------------------------------------------->
-
-<section class="section-block feature-2">
-<div class="row flex">
-<div class="column width-8 push-3 offset-1">
-<div class="feature-image mb-mobile-50">
-<div class="feature-image-inner center-on-mobile horizon" data-animate-in="preset:slideInRightShort;duration:3000;delay:300ms;" data-threshold="0.3">
-<div class="img-wrap1">
-<div class="pc"><img src="/img/top04.jpg" alt="現長の一日"></div>
-<div class="sp"><img src="/img/top04_sp.jpg" alt="現長の一日"></div>
-</div></div></div></div>
-<div class="column width-3 pull-9 tategaki02">
-<div class="feature-content">
-<div class="feature-content-inner left center_sp horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
-<h2 class="lspacing-medium f16 ml-20 lh15">現長の一日<span class="pc">　　　</span><br class="sp"><span class="allura f_grn shin ls01 ml-20">A Day at GENCHO</span></h2>
-<p class="p1 ml-20">
-<strong class="f_grn">8:00 朝礼</strong><br>
-チーム全員で今日の作業内容と<br>
-安全確認を行います<br>
-<br>
-<strong class="f_grn">8:30 現場作業</strong><br>
-それぞれの持ち場で<br>
-丁寧に施工を進めます<br>
-<br>
-<strong class="f_grn">12:00 昼休憩</strong><br>
-仲間と食事をしながら<br>
-コミュニケーションを深めます<br>
-<br>
-<strong class="f_grn">13:00 午後の作業</strong><br>
-進捗を確認しながら<br>
-計画通りに仕上げていきます<br>
-<br>
-<strong class="f_grn">17:00 終業</strong><br>
-後片付けと翌日の準備を行い<br>
-一日の業務を終えます
-</p>
-</div></div></div></div>
-</section>
-
 <p id="pagetop">
 <a href="#"><span>▲</span></a>
 </p>
 
-<!------ 募集要項（アイコン形式） ----------------------------------------------->
+<!------ 募集職種（中途・新卒 共通） ----------------------------------------------->
 
 <section class="section-block pb-20">
-
-<div class="row flex mb-40 horizon" data-animate-in="preset:slideInUpShort;duration:1800ms;" data-threshold="0.3">
-<div class="column width-12 mb-20">
-<div class="line02 f16 center ls22">募集要項<br><span class="allura f_grn f09">Recruitment Details</span></div>
+<div class="row">
+<div class="column width-12">
+<div class="line02 f16 center ls22">募集職種（中途・新卒 共通）<br><span class="allura f_grn f09">Open Positions</span></div>
+</div>
 </div>
 
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon21.png"></div>
-<div class="cell">
-募集職種<br>
-<span class="f_grn">施工管理スタッフ</span><br>
-<span class="f_grn">建築施工スタッフ</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon22.png"></div>
-<div class="cell">
-勤務時間<br>
-8:00〜17:00<br>
-<span class="f08">（休憩1時間）</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon25.png"></div>
-<div class="cell">
-休日・休暇<br>
-<span class="f08">完全週休2日制（土日祝）<br>
-年末年始、夏季休暇、有給休暇</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon33.png"></div>
-<div class="cell">
-給与<br>
-<span class="f08">月給25万円〜45万円<br>
-※経験・能力により優遇</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon26.png"></div>
-<div class="cell">
-待遇・福利厚生<br>
-<span class="f08">社会保険完備、交通費支給<br>
-昇給・賞与あり、資格手当</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon27.png"></div>
-<div class="cell">
-資格取得支援<br>
-<span class="f08">受験費用全額負担<br>
-勉強時間の確保もサポート</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon30.png"></div>
-<div class="cell">
-勤務地<br>
-<span class="f08">静岡県富士市（本社）<br>
-現場は全国各地</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon31.png"></div>
-<div class="cell">
-交通・駐車場<br>
-<span class="f08">マイカー通勤可<br>
-無料駐車場完備</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon28.png"></div>
-<div class="cell">
-応募資格<br>
-<span class="f08">学歴不問<br>
-未経験者歓迎・経験者優遇</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon29.png"></div>
-<div class="cell">
-求める人物像<br>
-<span class="f08">誠実で向上心のある方<br>
-チームワークを大切にできる方</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon35.png"></div>
-<div class="cell">
-選考プロセス<br>
-<span class="f08">書類選考 → 面接（1〜2回）<br>
-→ 内定（1週間程度）</span>
-</div></div></div>
-
-<div class="column width-3a mb-20">
-<div class="icon01">
-<div class="cell w_icon"><img src="/img/icon36.png"></div>
-<div class="cell">
-その他<br>
-<span class="f08">見学・職場体験も随時受付中<br>
-お気軽にご相談ください</span>
-</div></div></div>
-
+<div class="row mt-30">
+<div class="column width-12 mb-30">
+<h3 class="f16 mb-10 f_grn">現在以下の職種で募集しています</h3>
+</div>
 </div>
 
-<!------ エントリーセクション ----------------------------------------------->
-
-<div id="entry-section" class="row center">
-<div class="column width-8 offset-2 mt-40 mb-40">
-<div class="line02 f16 center ls22 mb-30">エントリー方法<br><span class="allura f_grn f09">How to Apply</span></div>
-
-<div class="bkg-grey-ultralight pt-30 pb-30 pl-20 pr-20 mb-20">
-<h3 class="f14 mb-20 f_grn">◆ エン・ジャパン経由でのご応募</h3>
-<p class="p1 mb-20">
-詳細な募集要項と応募フォームは<br>
-エン・ジャパンの求人サイトをご覧ください
-</p>
-<a href="https://en-gage.net/gencho/" target="_blank" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center w100">> エン・ジャパンで詳細を見る</a>
+<div class="row recruit-roles">
+<div class="column width-6 mb-30">
+<div class="recruit-role-card">
+<div class="recruit-role-head">
+<span class="recruit-role-label">中途採用</span>
+<h4 class="recruit-role-title">建築施工管理</h4>
+</div>
+<div class="recruit-role-tags">
+<span class="recruit-tag">月給：250,000円〜400,000円</span>
+<span class="recruit-tag">勤務地：大阪府大阪市</span>
+<span class="recruit-tag">男女共に働きやすい職場</span>
+</div>
+</div>
 </div>
 
-<div class="bkg-grey-ultralight pt-30 pb-30 pl-20 pr-20 mb-20">
-<h3 class="f14 mb-20 f_grn">◆ お問い合わせフォームからのご応募</h3>
-<p class="p1 mb-20">
-当社のお問い合わせフォームからも<br>
-ご応募いただけます<br>
-「お問い合わせ内容」に「採用応募」とご記入ください
-</p>
-<a href="/contact/" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center w100">> お問い合わせフォームへ</a>
+<div class="column width-6 mb-30">
+<div class="recruit-role-card">
+<div class="recruit-role-head">
+<span class="recruit-role-label">中途採用</span>
+<h4 class="recruit-role-title">軽作業スタッフ</h4>
+</div>
+<div class="recruit-role-tags">
+<span class="recruit-tag">月給：200,000円〜</span>
+<span class="recruit-tag">勤務地：大阪府大阪市</span>
+<span class="recruit-tag">体を動かす作業中心</span>
+<span class="recruit-tag">男女ともに働きやすい</span>
+</div>
+</div>
 </div>
 
-<div class="bkg-grey-ultralight pt-30 pb-30 pl-20 pr-20">
-<h3 class="f14 mb-20 f_grn">◆ お電話でのお問い合わせ</h3>
+<div class="column width-6 mb-30">
+<div class="recruit-role-card">
+<div class="recruit-role-head">
+<span class="recruit-role-label">中途採用</span>
+<h4 class="recruit-role-title">建築施工管理（別募集枠）</h4>
+</div>
+<div class="recruit-role-tags">
+<span class="recruit-tag">月給：250,000円〜300,000円</span>
+<span class="recruit-tag">勤務地：大阪府大阪市</span>
+<span class="recruit-tag">内容は施工管理と近い枠</span>
+</div>
+</div>
+</div>
+
+<div class="column width-6 mb-30">
+<div class="recruit-role-card">
+<div class="recruit-role-head">
+<span class="recruit-role-label">新卒採用</span>
+<h4 class="recruit-role-title">軽作業スタッフ（新卒）</h4>
+</div>
+<div class="recruit-role-tags">
+<span class="recruit-tag">月給：200,000円〜</span>
+<span class="recruit-tag">男女問わず応募可能</span>
+<span class="recruit-tag">未経験でも働きやすい</span>
+</div>
+</div>
+</div>
+</div>
+
+<div class="row mt-10">
+<div class="column width-12">
+<div class="recruit-appeal">
+<h4 class="f14 mb-10 f_grn">会社のアピールポイント</h4>
 <p class="p1">
-採用担当まで直接お電話ください<br>
-<strong class="f16">TEL: 0545-61-1344</strong><br>
-<span class="f08">（平日 8:00〜17:00）</span>
+男女ともに働きやすい職場<br>
+施工管理や軽作業など複数の職種で人材募集中<br>
+大阪市を中心とした現場での仕事です。
 </p>
 </div>
+</div>
+</div>
+</section>
 
-</div>
-</div>
+<!------ LINEでお問い合わせ ----------------------------------------------->
 
-<div class="row center">
-<div class="column width-6 offset-3 mt-20">
-<div class="top_logo02"><a href="/"><img src="/img/logo_blk03_new.png" class="linkimg"></a></div>
-<div class="mt-10">〒416-0944 静岡県富士市横割6-8-1　TEL：0545-61-1344　FAX：0545-61-1343</div>
-<div class="mt-20">
-<a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-twitter f_gry f14"></span></a>
-<a href="https://www.facebook.com/gencho416" target="_blank"><span class="fa-brands fa-facebook f_gry f14"></span></a>
-</div>
+<section class="section-block pb-20">
+<div class="row">
+<div class="column width-12">
+<div class="line02 f16 center ls22">LINEでお問い合わせ<br><span class="allura f_grn f09">LINE Contact</span></div>
 </div>
 </div>
 
+<div class="row mt-30 center">
+<div class="column width-8 offset-2">
+<div class="bkg-grey-ultralight pt-30 pb-30 pl-20 pr-20">
+<p class="p1 mb-20 center">
+LINEからのご相談も受け付けます。<br>
+公式アカウントは準備中のため、公開まで今しばらくお待ちください。
+</p>
+<a href="#" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center w100">> LINEで問い合わせ（準備中）</a>
+</div>
+</div>
+</div>
 </section>
 
 <!------ Footer ----------------------------------------------->
@@ -433,29 +205,24 @@
 ---　GENCHO GROUP　---
 </div></div>
 
-<div class="row pb-20 horizon" data-animate-in="preset:slideInUpShort;duration:1000ms;delay:400ms;" data-threshold="0.3">
-  <div class="column width-3 mb-10">
-  <a href="/about/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 現長について</a>
-  </div>
-  <div class="column width-3 mb-10">
-  <a href="/services/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 事業内容</a>
-  </div>
+<div class="row pb-20 horizon footer-links" data-animate-in="preset:slideInUpShort;duration:1000ms;delay:400ms;" data-threshold="0.3">
   <div class="column width-3 mb-10">
   <a href="/company/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 会社情報</a>
   </div>
   <div class="column width-3 mb-10">
+  <a href="/works/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 施工実績</a>
+  </div>
+  <div class="column width-3 mb-10">
   <a href="/contact/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> お問い合わせ</a>
   </div>
+</div>
   </div>
 
 </div>
 
 <div class="f09 bkg-blk-footer">
 <div class="row">
-<div class="column width-6 f11 left1">
-<a href="/company/">会社情報</a> ｜ <a href="/contact/">お問い合わせ</a>
-</div>
-<div class="column width-6 right1">Copyright(C) GENCHO Co., Ltd. , All Rights Reserved.
+<div class="column width-12 center">Copyright(C) GENCHO Co., Ltd. , All Rights Reserved.
 </div>
 </div>
 </div>
