--- a/public/works/index.html
+++ b/public/works/index.html
@@ -9,8 +9,8 @@
 <meta name="keywords" content="施工実績,工場,倉庫,物流施設,商業施設,シートシャッター,現長株式会社">
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="/favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="/icon180.png">
+<link rel="shortcut icon" href="/img/logo_menu01_new.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/img/logo_menu01_new.png">
 
 <!-- Font -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -146,19 +146,14 @@
 <aside>
 <ul class="scroll-box">
 <div class="menu_logo"><a href="/"><img src="/img/logo_menu01_new.png" class="linkimg"></a></div>
-<li><a href="/about/">現長について</a></li>
-<li><a href="/services/">事業内容</a></li>
-<li><a href="/works/">施工実績</a></li>
 <li><a href="/company/">会社情報</a></li>
+<li><a href="/works/">施工実績</a></li>
 <li><a href="/recruit/">採用情報</a></li>
 <li><a href="/contact/">お問い合わせ</a></li>
-<li><a href="/news/">お知らせ</a></li>
 <div class="mt-20">
 <a href="/contact/" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center w100">> お問い合わせ</a>
 </div>
 <div class="">
-<a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-twitter f_gry f16"></span></a>
-<a href="https://www.facebook.com/gencho416" target="_blank"><span class="fa-brands fa-facebook f_gry f16"></span></a>
 </div>
 </ul>
 <button><div class="opn_btn"><img src="/img/btn03_open.png"></div></button>
@@ -192,148 +187,7 @@
 </div>
 </section>
 
-<!------ Category Tabs ----------------------------------------------->
-
-<section class="section-block">
-<div class="row">
-<div class="column width-12 center_sp">
-<div class="category-tabs horizon" data-animate-in="preset:slideInUpShort;duration:1000ms;" data-threshold="0.3">
-<button class="category-tab active" data-category="all">全て</button>
-<button class="category-tab" data-category="factory">工場・製造施設</button>
-<button class="category-tab" data-category="warehouse">倉庫・物流施設</button>
-<button class="category-tab" data-category="commercial">商業施設</button>
-</div>
-</div>
-</div>
-
-<!------ Works Gallery Grid ----------------------------------------------->
-
-<div class="row">
-<div class="column width-12">
-<div class="works-grid horizon" data-animate-in="preset:slideInUpShort;duration:1500ms;delay:200ms;" data-threshold="0.3">
-
-<!-- Work Item 1 -->
-<div class="work-item" data-category="factory">
-<img src="/img/work01.jpg" alt="大手製造業様 工場施工実績" />
-<div class="work-overlay">
-<h3>大手製造業A社様</h3>
-<p class="location"><i class="fa-solid fa-location-dot"></i> 静岡県富士市</p>
-<p class="date"><i class="fa-regular fa-calendar"></i> 2025年3月</p>
-<p class="description">高速シートシャッター5台設置<br />生産ラインの温度管理を最適化</p>
-</div>
-</div>
-
-<!-- Work Item 2 -->
-<div class="work-item" data-category="warehouse">
-<img src="/img/work02.jpg" alt="物流センター施工実績" />
-<div class="work-overlay">
-<h3>大型物流センターB社様</h3>
-<p class="location"><i class="fa-solid fa-location-dot"></i> 愛知県名古屋市</p>
-<p class="date"><i class="fa-regular fa-calendar"></i> 2025年1月</p>
-<p class="description">高速シートシャッター8台設置<br />物流効率の大幅な向上を実現</p>
-</div>
-</div>
-
-<!-- Work Item 3 -->
-<div class="work-item" data-category="commercial">
-<img src="/img/work03.jpg" alt="ショッピングセンター施工実績" />
-<div class="work-overlay">
-<h3>ショッピングセンターC社様</h3>
-<p class="location"><i class="fa-solid fa-location-dot"></i> 神奈川県横浜市</p>
-<p class="date"><i class="fa-regular fa-calendar"></i> 2024年12月</p>
-<p class="description">営業時間外での施工対応<br />店舗運営への影響ゼロ</p>
-</div>
-</div>
-
-<!-- Work Item 4 -->
-<div class="work-item" data-category="factory">
-<img src="/img/top01.jpg" alt="食品工場施工実績" />
-<div class="work-overlay">
-<h3>食品製造工場D社様</h3>
-<p class="location"><i class="fa-solid fa-location-dot"></i> 静岡県静岡市</p>
-<p class="date"><i class="fa-regular fa-calendar"></i> 2024年11月</p>
-<p class="description">衛生管理に配慮した高速シャッター<br />クリーンルーム対応</p>
-</div>
-</div>
-
-<!-- Work Item 5 -->
-<div class="work-item" data-category="warehouse">
-<img src="/img/top01.jpg" alt="冷蔵倉庫施工実績" />
-<div class="work-overlay">
-<h3>冷蔵・冷凍倉庫E社様</h3>
-<p class="location"><i class="fa-solid fa-location-dot"></i> 東京都江東区</p>
-<p class="date"><i class="fa-regular fa-calendar"></i> 2024年10月</p>
-<p class="description">断熱性能を重視した施工<br />エネルギーコスト削減に貢献</p>
-</div>
-</div>
-
-<!-- Work Item 6 -->
-<div class="work-item" data-category="factory">
-<img src="/img/top01.jpg" alt="自動車部品工場施工実績" />
-<div class="work-overlay">
-<h3>自動車部品工場F社様</h3>
-<p class="location"><i class="fa-solid fa-location-dot"></i> 愛知県豊田市</p>
-<p class="date"><i class="fa-regular fa-calendar"></i> 2024年9月</p>
-<p class="description">高速シートシャッター12台設置<br />短工期での一斉施工を実現</p>
-</div>
-</div>
-
-</div>
-</div>
-</div>
-</section>
-
-<!------ Numbers: Company Statistics ----------------------------------------------->
-
-<section class="section-block bkg-info02">
-<div class="row">
-<div class="column width-12 horizon" data-animate-in="preset:slideInUpShort;duration:3000ms;">
-<h2 class="ls02 f16 center_sp mb-40">数字で見る実績<br /><span class="allura f_grn shin ls01">Our Achievements</span></h2>
-</div>
-</div>
-
-<div class="row">
-<div class="column width-3 center_sp mb-30">
-<div class="horizon" data-animate-in="preset:scaleOut;duration:3000;delay:0ms;" data-threshold="0.3">
-<div class="f_grn" style="font-size: 4rem; font-weight: bold;">500+</div>
-<h3 class="f16 mb-10">累計施工件数</h3>
-<p class="p1">1985年の創業以来<br />多数の施工実績</p>
-</div>
-</div>
-
-<div class="column width-3 center_sp mb-30">
-<div class="horizon" data-animate-in="preset:scaleOut;duration:3000;delay:200ms;" data-threshold="0.3">
-<div class="f_grn" style="font-size: 4rem; font-weight: bold;">20+</div>
-<h3 class="f16 mb-10">対応業種数</h3>
-<p class="p1">製造業から商業施設まで<br />幅広い業種に対応</p>
-</div>
-</div>
-
-<div class="column width-3 center_sp mb-30">
-<div class="horizon" data-animate-in="preset:scaleOut;duration:3000;delay:400ms;" data-threshold="0.3">
-<div class="f_grn" style="font-size: 4rem; font-weight: bold;">2週間</div>
-<h3 class="f16 mb-10">平均工期</h3>
-<p class="p1">お客様の業務への<br />影響を最小限に</p>
-</div>
-</div>
-
-<div class="column width-3 center_sp mb-30">
-<div class="horizon" data-animate-in="preset:scaleOut;duration:3000;delay:600ms;" data-threshold="0.3">
-<div class="f_grn" style="font-size: 4rem; font-weight: bold;">85%</div>
-<h3 class="f16 mb-10">リピート率</h3>
-<p class="p1">高い顧客満足度<br />多数のリピートご依頼</p>
-</div>
-</div>
-</div>
-
-<div class="row">
-<div class="column width-12 center_sp mb-30">
-<div class="horizon" data-animate-in="preset:slideInUpShort;duration:3000;delay:800ms;" data-threshold="0.3">
-<a href="/contact/" class="button xlarge bkg-btn01 bkg-hover-btn01">> お見積もり・ご相談はこちら</a>
-</div>
-</div>
-</div>
-</section>
+<div class="works-spacer" aria-hidden="true"></div>
 
 <!------ Footer ----------------------------------------------->
 
@@ -345,29 +199,24 @@
 ---　GENCHO GROUP　---
 </div></div>
 
-<div class="row pb-20 horizon" data-animate-in="preset:slideInUpShort;duration:1000ms;delay:400ms;" data-threshold="0.3">
+<div class="row pb-20 horizon footer-links" data-animate-in="preset:slideInUpShort;duration:1000ms;delay:400ms;" data-threshold="0.3">
   <div class="column width-3 mb-10">
-  <a href="https://www.gencho.biz/" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 公式サイト</a>
+  <a href="/company/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 会社情報</a>
   </div>
   <div class="column width-3 mb-10">
-  <a href="https://www.gencho.biz/services-4" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 事業内容</a>
+  <a href="/recruit/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 採用情報</a>
   </div>
   <div class="column width-3 mb-10">
-  <a href="https://www.gencho.biz/%E4%BC%9A%E7%A4%BE%E6%A6%82%E8%A6%81" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 会社概要</a>
+  <a href="/contact/" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> お問い合わせ</a>
   </div>
-  <div class="column width-3 mb-10">
-  <a href="https://en-gage.net/gencho/" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 採用情報</a>
-  </div>
+</div>
   </div>
 
 </div>
 
 <div class="f09 bkg-blk-footer">
 <div class="row">
-<div class="column width-6 f11 left1">
-<a href="/about/">現長について</a> ｜ <a href="/services/">事業内容</a> ｜ <a href="/contact/">お問い合わせ</a>
-</div>
-<div class="column width-6 right1">Copyright(C) GENCHO Co., Ltd. , All Rights Reserved.
+<div class="column width-12 center">Copyright(C) GENCHO Co., Ltd. , All Rights Reserved.
 </div>
 </div>
 </div>
